[gd_scene load_steps=4 format=3 uid="uid://bolvt76yw7q1j"]

[ext_resource type="Script" path="res://src/menu/setting.gd" id="1_rb6td"]
[ext_resource type="AudioStream" uid="uid://cuimubxduhb53" path="res://assets/sounds/main_menu_sound_effect.mp3" id="2_0d3v6"]
[ext_resource type="Texture2D" uid="uid://c64d6ghwsufam" path="res://assets/menu/background.png" id="2_qtdu7"]

[node name="Setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rb6td")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(3993, 0)

[node name="Background" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
texture_filter = 1
offset_right = 6144.0
offset_bottom = 1024.0
scale = Vector2(0.65, 0.65)
texture = ExtResource("2_qtdu7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0d3v6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -50.5
offset_right = 33.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="volume_slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
max_value = 1.0
step = 0.001

[node name="ControleButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../volume_slider")
text = "Back"

[connection signal="value_changed" from="VBoxContainer/volume_slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/ControleButton" to="." method="_on_controle_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
